# aleph-zero-hackathon

./: README.md  play-account.json  plus-account.json  pnpm-lock.yaml
contracts/: .gitignore  build-all.sh  postinstall.sh  tsconfig.json
contracts/deployments/phone_numbers/: alephzero-testnet.ts  phone_numbers.contract  phone_numbers.json  phone_numbers.wasm
contracts/deployments/transfer_escrow/: alephzero-testnet.ts  transfer_escrow.contract  transfer_escrow.json  transfer_escrow.wasm
contracts/scripts/: deploy.ts
contracts/scripts/utils/: getDeploymentData.ts
contracts/src/phone_numbers/: Cargo.toml  lib.rs
contracts/src/transfer_escrow/: Cargo.toml  lib.rs
frontend/: .env.aleph  package.json
frontend/public/: operators.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/approve-transfer/: page.tsx
frontend/src/app/assign-number/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/finish-transfer/: page.tsx
frontend/src/app/register-phone/: page.tsx
frontend/src/app/register-request/: page.tsx
frontend/src/app/set-metadata/: page.tsx
frontend/src/app/transfer-request/: page.tsx
frontend/src/components/table/: table.tsx  transferTable.tsx
frontend/src/components/ui/: app-bar.tsx  button.tsx  request-form.tsx  request-metadata.tsx  request-modal.tsx
frontend/src/components/web3/: connect-button.tsx  greeter-contract-interactions.tsx
frontend/src/deployments/: deployments.ts
subsquid/: squid.yaml
subsquid/src/: processor.ts
