[package]
name = "phone_numbers"
version = "0.0.1"
authors = ["Scio Labs <hello@scio.xyz>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = [
    "psp34",
    "access_control",
    "ownable",
] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
ink_primitives = { version = "~3.4.0", default-features = false }


[dev-dependencies]
ink_e2e = "4.3.0"
test_helpers = { path = "../test_helpers", default-features = false }

[lib]
name = "phone_numbers"
path = "lib.rs"

[features]
default = ["std", "e2e-tests"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std"]
ink-as-dependency = []
e2e-tests = []
