[package]
name = "phone-numbers"
version = "0.0.1"
authors = ["Scio Labs <hello@scio.xyz>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
openbrush = { version = "4.0.0-beta", default-features = false, features = ["psp34"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.2.1"
test_helpers = { path = "../test_helpers", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std", "e2e-tests"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std"]
ink-as-dependency = []
e2e-tests = []
